# AI-Operations-Automation

./: .env.example  .gitignore  AI Operations Automation MVP Plan.md  README.md  pyproject.toml  test_workflow.py
backend/: config.py  data_generator.py  main.py
backend/agents/: __init__.py  aggregation_agent.py  analysis_agent.py  base_agent.py  chat_agent.py  cleaning_agent.py  delivery_agent.py  embedding_agent.py  ingestion_agent.py  report_agent.py
backend/api/: __init__.py  approvals.py  dashboard.py  reports.py  schedules.py  workflows.py
backend/database/: __init__.py  db.py  schema.sql
backend/database/migrations/: 20260315_create_schedules.sql
backend/orchestration/: __init__.py  nodes.py  state.py  workflow_graph.py
backend/scheduler/: scheduler.py
backend/services/: __init__.py  storage.py
backend/utils/: __init__.py  error_handler.py  logger.py
data/: mock_financial_data.csv  mock_inventory_data.csv  mock_sales_data.csv  test_multi_sheet_mixed.xlsx  test_multi_sheet_sales.xlsx
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/approvals/: page.tsx
frontend/src/app/documentation/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/app/runs/[id]/: page.tsx
frontend/src/app/schedules/: page.tsx
frontend/src/components/: file-upload.tsx  notification-bell.tsx  sidebar.tsx  theme-toggle.tsx
frontend/src/components/ui/: popover.tsx
frontend/src/lib/: api.ts
