[project]
name = "ai-operations-automation"
version = "0.1.0"
description = "AI-powered operational automation platform that converts manual ERP reporting workflows into autonomous AI agent pipelines."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "openai>=1.60.0",
    "supabase>=2.12.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    "httpx>=0.28.0",
    "weasyprint>=63.0",
    "markdown>=3.7",
    "faker>=33.0.0",
    "xhtml2pdf>=0.2.17",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.setuptools.packages.find]
include = ["backend*"]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

